<resources>

    <string name="app_name">SoftApConnectCompatTester v1.0.0</string>
    
    <string name="softap_popmenu_edit_ssid">Edit Ssid</string>
    <string name="softap_popmenu_edit_pwd">Edit Password</string>
    <string name="softap_popmenu_edit_detail">Edit Detail</string>
    <string name="softap_popmenu_edit_delete">Delete</string>
    
    <string name="softap_edit_dialog_ssid_hint">Please Input new Ssid</string>
    <string name="softap_edit_dialog_pwd_hint">Please Input new Password</string>
    <string name="softap_edit_dialog_detail_hint">Please Input new Detail</string>
    <string name="softap_edit_dialog_delete_hint">Are you sure to delete it?</string>
    
    <string name="softap_edit_dialog_ssid_title">Edit Ssid</string>
    <string name="softap_edit_dialog_pwd_title">Edit Password</string>
    <string name="softap_edit_dialog_detail_title">Edit Detail</string>
    <string name="softap_edit_dialog_delete_title">Delete</string>
    
    <string name="softap_menu_item_add_title">Add new SoftAp</string>
    <string name="softap_menu_item_start_title">Start Test</string>
    
    <string name="softap_add_dialog_ssid_hint">@string/softap_edit_dialog_ssid_hint</string>
    <string name="softap_add_dialog_pwd_hint">@string/softap_edit_dialog_pwd_hint</string>
    <string name="softap_add_dialog_detail_hint">@string/softap_edit_dialog_detail_hint</string>
    
    <string name="softap_start_dialog_testcount_hint">Please Input test time for each softap(>0)</string>
    <string name="softap_start_dialog_conntimeout_hint">Please Input connect timeout in seconds(>0)</string>
    <string name="softap_start_dialog_connretry_hint">Please Input connect retry time(>0)</string>
    
    <string name="softap_toast_err_softa_exist_already">Softap has exist already!</string>
    <string name="softap_toast_err_start_testcount_zero">Softap testcount should > 0</string>
    <string name="softap_toast_err_start_testtimeout_zero">Softap connect timeout should > 0</string>
    <string name="softap_toast_err_start_testretry_zero">Softap retry time should > 0</string>
	<string name="softap_toast_err_start_wifi_is_closed">Wi-Fi is closed</string>
	
	<string name="softap_progress_bar_title">Testcase executing situation</string>
    
    <string-array name="cipher_types">
        <item>WEP</item>
        <item>WPA</item>
        <item>OPEN</item>
        <item>WEP-SSID-HIDDEN</item>
        <item>WPA-SSID-HIDDEN</item>
        <item>OPEN-SSID-HIDDEN</item>
        <item>INVALID</item>
    </string-array>
    
    <string-array name="test_modes">
        <item>Single Cycle</item>
        <item>Loop Cycle</item>
    </string-array>

</resources>